added section-title and fix

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,9 @@
     <nav class="nav main-swiper-nav" title="header nav">
       <ul class="list-reset nav__list">
         <li class="nav__item">
+          <button type="button" class="btn nav__link"></button>
+        </li>
+        <li class="nav__item">
           <button type="button" class="btn nav__link">
             about
           </button>
@@ -192,6 +195,15 @@
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/projects-bg.webp');"></span>
               </span>
+              <div class="container main-swiper-slide-container">
+                <div class="projects">
+                  <div class="section-header">
+                    <h2 class="section-title">
+                      projects
+                    </h2>
+                  </div>
+                </div>
+              </div>
             </section>
           </div>
           <div class="swiper-slide" data-transfer-classes="color-gray-300-lg">
@@ -199,6 +211,31 @@
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/modeling-bg.webp');"></span>
               </span>
+              <div class="container main-swiper-slide-container">
+                <div class="modeling">
+                  <div class="section-header">
+                    <h2 class="section-title">
+                      modeling
+                    </h2>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+          <div class="swiper-slide" data-transfer-classes="color-gray-300-lg">
+            <section class="main-swiper-slide">
+              <span class="main-swiper-slide-bg-wrapper">
+                <span class="main-swiper-slide-bg" style="background-image: url('./img/credits-bg.webp');"></span>
+              </span>
+              <div class="container main-swiper-slide-container">
+                <div class="credits">
+                  <div class="section-header">
+                    <h2 class="section-title">
+                      credits
+                    </h2>
+                  </div>
+                </div>
+              </div>
             </section>
           </div>
           <div class="swiper-slide" data-transfer-classes="color-gray-300-lg">
@@ -206,13 +243,33 @@
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/events-bg.webp');"></span>
               </span>
+
+              <div class="container main-swiper-slide-container">
+                <div class="events">
+                  <div class="section-header">
+                    <h2 class="section-title">
+                      events
+                    </h2>
+                  </div>
+                </div>
+              </div>
             </section>
           </div>
-          <div class="swiper-slide" data-transfer-classes="color-gray-300-lg">
+          <div class="swiper-slide">
             <section class="main-swiper-slide">
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/press-bg.webp');"></span>
               </span>
+
+              <div class="container main-swiper-slide-container">
+                <div class="press">
+                  <div class="section-header">
+                    <h2 class="section-title">
+                      press
+                    </h2>
+                  </div>
+                </div>
+              </div>
             </section>
           </div>
           <div class="swiper-slide">
