--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,9 @@
     <nav class="nav main-swiper-nav" title="header nav">
       <ul class="list-reset nav__list">
         <li class="nav__item">
-          <button type="button" class="btn nav__link"></button>
+          <button type="button" class="btn nav__link">
+            home
+          </button>
         </li>
         <li class="nav__item">
           <button type="button" class="btn nav__link">
@@ -180,10 +182,17 @@
                       <p>
                         Anastasiia is a creative force in fashion, dance, and entertaiment industries. After moving to NYC eight years ago, she has been working with icons like Nas on Hip Hop 50, Omarion, ''Can you hear me'', starred alongside Katja Herbers and Mike Colter on ''Evil'', and faced off against legendary Twitch on So You Think You Can Dance.
                         <br>
-                        Graced the pages of Vogue USA and Vogue Italia, walked for Puma and Elena Velez at NYFW, performed for Skims X Vanessa Beecroft, and modeled on Project Runway (Seasons 19&20), Anastasiia hasn’t stop there. Her passion for story telling led her to direction debut for Nike short film ''Dance is Universal Language'' eamed praise from Suzanne Donaldson, Nike’s former creative strategist.
-                        <br>
-                        Whether performing, modeling or creating, Anastasiia continues to inspire with her boundless creativity and dedication to the craft.
+                        <span data-text-collapse="text-collapse-1">
+                          <span>
+                            Graced the pages of Vogue USA and Vogue Italia, walked for Puma and Elena Velez at NYFW, performed for Skims X Vanessa Beecroft, and modeled on Project Runway (Seasons 19&20), Anastasiia hasn’t stop there. Her passion for story telling led her to direction debut for Nike short film ''Dance is Universal Language'' eamed praise from Suzanne Donaldson, Nike’s former creative strategist.
+                            <br>
+                            Whether performing, modeling or creating, Anastasiia continues to inspire with her boundless creativity and dedication to the craft.
+                          </span>
+                        </span>
                       </p>
+                      <button type="button" class="btn btn-inline" data-button-collapse="text-collapse-1" data-expanded="false">
+                        Learn more
+                      </button>
                     </div>
                   </div>
                 </div>
