--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,15 @@
   <div class="site-container">
     <header class="header">
   <div class="container header-container">
-    <button type="button" class="btn burger">
+    <button type="button" class="btn burger"
+      data-bs-toggle="offcanvas" data-bs-target="#offcanvas-navigation" aria-controls="offcanvasNavigation">
       home
 
       <span class="icon"></span>
     </button>
 
-    <nav class="nav main-swiper-nav" title="header nav">
+    <nav class="nav header-nav main-swiper-nav" title="header nav"
+      data-transfer-origin="header-navigation" data-transfer-breakpoint="992" data-transfer-placement="first">
       <ul class="list-reset nav__list">
         <li class="nav__item">
           <button type="button" class="btn nav__link">
@@ -92,7 +94,8 @@
                         ''Trying to make a feature film with no money is the best film school you can do.''
                       </p>
                     </div>
-                    <button type="button" class="btn btn-base btn-light">
+                    <button type="button" class="btn btn-base btn-light"
+                      data-bs-toggle="modal" data-bs-target="#modal-last-work">
                       last work
                     </button>
                   </div>
@@ -118,7 +121,8 @@
                   </div>
 
                   <div class="hero-footer">
-                    <button type="button" class="btn btn-link">
+                    <button type="button" class="btn btn-link"
+                      data-bs-toggle="offcanvas" data-bs-target="#offcanvas-contacts" aria-controls="offcanvasContacts">
                       <span class="icon">
                         <svg>
                           <use xlink:href="img/icons/share.svg#svg-share"></use>
@@ -199,7 +203,7 @@
               </div>
             </section>
           </div>
-          <div class="swiper-slide" data-transfer-classes="color-gray-300-lg">
+          <div class="swiper-slide" data-transfer-classes="color-gray-200-lg">
             <section class="main-swiper-slide">
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/projects-bg.webp');"></span>
@@ -215,7 +219,7 @@
               </div>
             </section>
           </div>
-          <div class="swiper-slide" data-transfer-classes="color-gray-300-lg">
+          <div class="swiper-slide" data-transfer-classes="color-gray-200-lg">
             <section class="main-swiper-slide">
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/modeling-bg.webp');"></span>
@@ -231,7 +235,7 @@
               </div>
             </section>
           </div>
-          <div class="swiper-slide" data-transfer-classes="color-gray-300-lg">
+          <div class="swiper-slide" data-transfer-classes="color-gray-200-lg">
             <section class="main-swiper-slide">
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/credits-bg.webp');"></span>
@@ -247,7 +251,7 @@
               </div>
             </section>
           </div>
-          <div class="swiper-slide" data-transfer-classes="color-gray-300-lg">
+          <div class="swiper-slide" data-transfer-classes="color-gray-200-lg">
             <section class="main-swiper-slide">
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/events-bg.webp');"></span>
@@ -264,7 +268,7 @@
               </div>
             </section>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide" data-transfer-classes="color-gray-200-lg">
             <section class="main-swiper-slide">
               <span class="main-swiper-slide-bg-wrapper">
                 <span class="main-swiper-slide-bg" style="background-image: url('./img/press-bg.webp');"></span>
@@ -289,6 +293,161 @@
         </div>
       </div>
     </main>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas-contacts" aria-labelledby="offcanvas-contacts-label">
+    <div class="offcanvas-header">
+        <button type="button" class="btn btn-close"
+			data-bs-dismiss="offcanvas" aria-label="Close">
+            <span class="icon">
+                <svg>
+                    <use xlink:href="img/icons/close.svg#svg-close"></use>
+                </svg>
+            </span>
+        </button>
+    </div>
+    <div class="offcanvas-body">
+        <div class="contacts"
+			data-transfer-origin="contacts-transfer" data-transfer-breakpoint="992">
+            <ul class="list-reset social" title="Our socials">
+                <li class="social__item">
+                    <a href="#" target="_blank" class="btn btn-icon social__link" aria-label="Facebook">
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="img/icons/facebook.svg#svg-facebook"></use>
+                            </svg>
+                        </span>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="#" target="_blank" class="btn btn-icon social__link" aria-label="Facebook">
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="img/icons/instagram.svg#svg-instagram"></use>
+                            </svg>
+                        </span>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="#" target="_blank" class="btn btn-icon social__link" aria-label="Facebook">
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="img/icons/tiktok.svg#svg-tiktok"></use>
+                            </svg>
+                        </span>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="#" target="_blank" class="btn btn-icon social__link" aria-label="Facebook">
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="img/icons/youtube.svg#svg-youtube"></use>
+                            </svg>
+                        </span>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="#" target="_blank" class="btn btn-icon social__link" aria-label="Facebook">
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="img/icons/in.svg#svg-in"></use>
+                            </svg>
+                        </span>
+                    </a>
+                </li>
+                <li class="social__item">
+                    <a href="#" target="_blank" class="btn btn-icon social__link" aria-label="Facebook">
+                        <span class="icon">
+                            <svg>
+                                <use xlink:href="img/icons/telegram.svg#svg-telegram"></use>
+                            </svg>
+                        </span>
+                    </a>
+                </li>
+            </ul>
+
+            <form>
+                <div class="field-control">
+                    <p class="required">* Required fields</p>
+                    <div class="fieldset">
+                        <input type="text" class="field" name="first-name" placeholder="Enter your first name *" required>
+                    </div>
+                </div>
+                <div class="field-control">
+                    <div class="fieldset">
+                        <input type="text" class="field" name="last-name" placeholder="Enter your first name *" required>
+                    </div>
+                </div>
+                <div class="field-control">
+                    <div class="fieldset">
+                        <input type="email" class="field" name="email" placeholder="Enter your email *" required>
+                    </div>
+                </div>
+                <div class="field-control">
+                    <div class="fieldset">
+                        <input type="tel" class="field" name="phone" placeholder="Enter your phone number *" required>
+                    </div>
+                </div>
+                <div class="field-control">
+                    <div class="fieldset">
+                        <textarea name="massage" class="field" placeholder="Massage *"></textarea>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-base btn-light btn-submit">
+                    submit
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas-navigation" aria-labelledby="offcanvas-navigation-label">
+    <div class="offcanvas-header">
+        <button type="button" class="btn burger is-active"
+			data-bs-dismiss="offcanvas" aria-label="Close">
+            home
+
+            <span class="icon"></span>
+        </button>
+    </div>
+    <div class="offcanvas-body"
+		data-transfer-target="contacts-transfer header-navigation">
+        <nav class="nav header-nav" title="header nav">
+      <ul class="list-reset nav__list">
+        <li class="nav__item">
+          <a href="#" class="btn nav__link">
+            contacts
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="btn nav__link">
+            privacy policy
+          </a>
+        </li>
+        <li class="nav__item">
+          <a href="#" class="btn nav__link">
+            terms of use
+          </a>
+        </li>
+      </ul>
+    </nav>
+    </div>
+</div>
+    <div class="modal modal-video fade" id="modal-last-work" tabindex="-1" aria-hidden="true">
+    <button type="button" class="btn btn-close" data-bs-dismiss="modal" aria-label="Close">
+        <span class="icon">
+            <svg>
+                <use xlink:href="img/icons/close.svg#svg-close"></use>
+            </svg>
+        </span>
+    </button>
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div data-iframe-youtube="https://www.youtube.com/embed/RVmG_d3HKBA?si=kPWqcVAERgKW5YlS"></div>
+            </div>
+        </div>
+    </div>
+</div>
     <footer class="footer">
   <div class="container"></div>
 </footer>
