--- a/app/index.html
+++ b/app/index.html
@@ -34,42 +34,50 @@
       data-transfer-origin="header-navigation" data-transfer-breakpoint="992" data-transfer-placement="first">
       <ul class="list-reset nav__list">
         <li class="nav__item">
-          <button type="button" class="btn nav__link">
+          <button type="button" class="btn nav__link"
+            data-bs-dismiss="offcanvas">
             home
           </button>
         </li>
         <li class="nav__item">
-          <button type="button" class="btn nav__link">
+          <button type="button" class="btn nav__link"
+            data-bs-dismiss="offcanvas">
             about
           </button>
         </li>
         <li class="nav__item">
-          <button type="button" class="btn nav__link">
+          <button type="button" class="btn nav__link"
+            data-bs-dismiss="offcanvas">
             projects
           </button>
         </li>
         <li class="nav__item">
-          <button type="button" class="btn nav__link">
+          <button type="button" class="btn nav__link"
+            data-bs-dismiss="offcanvas">
             modeling
           </button>
         </li>
         <li class="nav__item">
-          <button type="button" class="btn nav__link">
+          <button type="button" class="btn nav__link"
+            data-bs-dismiss="offcanvas">
             credits
           </button>
         </li>
         <li class="nav__item">
-          <button type="button" class="btn nav__link">
+          <button type="button" class="btn nav__link"
+            data-bs-dismiss="offcanvas">
             events
           </button>
         </li>
         <li class="nav__item">
-          <button type="button" class="btn nav__link">
+          <button type="button" class="btn nav__link"
+            data-bs-dismiss="offcanvas">
             press
           </button>
         </li>
         <li class="nav__item">
-          <button type="button" class="btn nav__link">
+          <button type="button" class="btn nav__link"
+            data-bs-dismiss="offcanvas">
             merch
           </button>
         </li>
