change path youtube video

--- a/app/index.html
+++ b/app/index.html
@@ -451,7 +451,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-body">
-                <div data-iframe-youtube="https://www.youtube.com/embed/RVmG_d3HKBA?si=kPWqcVAERgKW5YlS"></div>
+                <div data-iframe-youtube="https://www.youtube.com/embed/EREqzEoVxKI?si=AaX-9wBWwShNjUG-"></div>
             </div>
         </div>
     </div>
