--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
                       Anastasiia
                     </h2>
                     <div class="hero-info-text">
-                      <p>
+                      <p data-text-animation="">
                         ''Trying to make a feature film with no money is the best film school you can do.''
                       </p>
                     </div>
