--- a/app/index.html
+++ b/app/index.html
@@ -247,8 +247,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-1-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-1-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Nike short Film
@@ -263,8 +263,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-2-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-2-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Short film
@@ -279,8 +279,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-1-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-1-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               ″Propel″
@@ -295,8 +295,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-2-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-2-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Promo video for ″Daylight Studio″
@@ -311,8 +311,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-1-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-1-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Nike short Film
@@ -327,8 +327,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-2-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-2-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Short film
@@ -343,8 +343,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-1-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-1-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               ″Propel″
@@ -359,8 +359,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-2-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-2-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Promo video for ″Daylight Studio″
@@ -549,8 +549,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-1-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-1-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               SYTYCD 17
@@ -565,8 +565,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-2-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-2-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Project runway 19
@@ -581,8 +581,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-1-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-1-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Project runway 20
@@ -597,8 +597,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-2-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-2-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Tvshow ″Evil″
@@ -613,8 +613,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-1-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-1-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               SYTYCD 17
@@ -629,8 +629,8 @@
                             data-bs-toggle="modal" data-bs-target="#modal-video"
                             data-youtube-path="https://www.youtube.com/embed/RVmG_d3HKBA?si=1WQvv4Z6JXo62bx_">
                             <picture>
-                              <source srcset="img/.webp" type="image/webp">
-                              <img loading="lazy" src="img/.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
+                              <source srcset="img/video-2-bg.webp" type="image/webp">
+                              <img loading="lazy" src="img/video-2-bg.jpg" class="projects-card-image" width="400" height="250" alt="Picture">
                             </picture>
                             <h3 class="projects-card-title">
                               Project runway 19
@@ -982,11 +982,6 @@
 		data-transfer-target="contacts-transfer header-navigation">
         <nav class="nav header-nav" title="header nav">
       <ul class="list-reset nav__list">
-        <li class="nav__item">
-          <a href="#" class="btn nav__link">
-            contacts
-          </a>
-        </li>
         <li class="nav__item">
           <a href="#" class="btn nav__link">
             privacy policy
