added slide press

--- a/app/index.html
+++ b/app/index.html
@@ -850,6 +850,164 @@
                       press
                     </h2>
                   </div>
+
+                  <div class="swiper-container cards-swiper">
+                    <button type="button" class="btn swiper-button-prev">
+                      <span class="icon">
+                        <svg>
+                          <use xlink:href="img/icons/arrow-left.svg#svg-arrow-left"></use>
+                        </svg>
+                      </span>
+                    </button>
+                    <button type="button" class="btn swiper-button-next">
+                      <span class="icon">
+                        <svg>
+                          <use xlink:href="img/icons/arrow-right.svg#svg-arrow-right"></use>
+                        </svg>
+                      </span>
+                    </button>
+                    <div class="swiper">
+                      <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                          <button type="button" class="btn events-card"
+                            data-bs-toggle="modal" data-bs-target="#modal-events">
+                            <h3 class="events-card-title">
+                              Release 1.
+                            </h3>
+                            <p class="events-card-descr">
+                              Online.
+                            </p>
+
+                            <span class="icon events-card-icon">
+                              <svg>
+                                <use xlink:href="img/icons/plus.svg#svg-plus"></use>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                        <div class="swiper-slide">
+                          <button type="button" class="btn events-card"
+                            data-bs-toggle="modal" data-bs-target="#modal-events">
+                            <h3 class="events-card-title">
+                              Release 2.
+                            </h3>
+                            <p class="events-card-descr">
+                              Podcast
+                            </p>
+
+                            <span class="icon events-card-icon">
+                              <svg>
+                                <use xlink:href="img/icons/plus.svg#svg-plus"></use>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                        <div class="swiper-slide">
+                          <button type="button" class="btn events-card"
+                            data-bs-toggle="modal" data-bs-target="#modal-events">
+                            <h3 class="events-card-title">
+                              Release 3.
+                            </h3>
+                            <p class="events-card-descr">
+                              TV.
+                            </p>
+
+                            <span class="icon events-card-icon">
+                              <svg>
+                                <use xlink:href="img/icons/plus.svg#svg-plus"></use>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                        <div class="swiper-slide">
+                          <button type="button" class="btn events-card"
+                            data-bs-toggle="modal" data-bs-target="#modal-events">
+                            <h3 class="events-card-title">
+                              Release 4.
+                            </h3>
+                            <p class="events-card-descr">
+                              YouTube.
+                            </p>
+
+                            <span class="icon events-card-icon">
+                              <svg>
+                                <use xlink:href="img/icons/plus.svg#svg-plus"></use>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+
+                        <div class="swiper-slide">
+                          <button type="button" class="btn events-card"
+                            data-bs-toggle="modal" data-bs-target="#modal-events">
+                            <h3 class="events-card-title">
+                              Release 1.
+                            </h3>
+                            <p class="events-card-descr">
+                              Online.
+                            </p>
+
+                            <span class="icon events-card-icon">
+                              <svg>
+                                <use xlink:href="img/icons/plus.svg#svg-plus"></use>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                        <div class="swiper-slide">
+                          <button type="button" class="btn events-card"
+                            data-bs-toggle="modal" data-bs-target="#modal-events">
+                            <h3 class="events-card-title">
+                              Release 2.
+                            </h3>
+                            <p class="events-card-descr">
+                              Podcast
+                            </p>
+
+                            <span class="icon events-card-icon">
+                              <svg>
+                                <use xlink:href="img/icons/plus.svg#svg-plus"></use>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                        <div class="swiper-slide">
+                          <button type="button" class="btn events-card"
+                            data-bs-toggle="modal" data-bs-target="#modal-events">
+                            <h3 class="events-card-title">
+                              Release 3.
+                            </h3>
+                            <p class="events-card-descr">
+                              TV.
+                            </p>
+
+                            <span class="icon events-card-icon">
+                              <svg>
+                                <use xlink:href="img/icons/plus.svg#svg-plus"></use>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                        <div class="swiper-slide">
+                          <button type="button" class="btn events-card"
+                            data-bs-toggle="modal" data-bs-target="#modal-events">
+                            <h3 class="events-card-title">
+                              Release 4.
+                            </h3>
+                            <p class="events-card-descr">
+                              YouTube.
+                            </p>
+
+                            <span class="icon events-card-icon">
+                              <svg>
+                                <use xlink:href="img/icons/plus.svg#svg-plus"></use>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </section>
